--- a/package.json
+++ b/package.json
@@ -22,20 +22,20 @@
     "dependencies": {
         "@babel/polyfill": "^7.0.0",
         "@babel/runtime": "^7.0.0",
-        "@sencha/ext": "~6.6.0",
-        "@sencha/ext-charts": "^6.7.0",
-        "@sencha/ext-modern": "~6.6.0",
-        "@sencha/ext-modern-theme-material": "~6.6.0",
-        "@sencha/ext-modern-treegrid": "~6.6.0",
-        "@sencha/ext-react": "~6.6.2",
-        "@sencha/ext-react-renderercell": "^6.6.3",
-        "@sencha/ext-react-transition": "~6.6.2",
+        "@sencha/ext": "^7.1.0",
+        "@sencha/ext-charts": "^7.1.0",
+        "@sencha/ext-modern": "^7.1.0",
+        "@sencha/ext-modern-theme-material": "^7.1.0",
+        "@sencha/ext-modern-treegrid": "^7.1.0",
+        "@sencha/ext-react": "^7.0.0",
+        "@sencha/ext-react-renderercell": "^7.0.0",
+        "@sencha/ext-react-transition": "^7.0.0",
         "axios": "^0.18.0",
         "prop-types": "^15.6.2",
-        "react": "^16.5.2",
-        "react-dom": "^16.5.2",
-        "react-router-dom": "^4.3.1",
-        "react-table": "^6.8.6"
+        "react": "^16.12.0",
+        "react-dom": "^16.12.0",
+        "react-router-dom": "^5.1.2",
+        "react-table": "^7.0.0-rc.16"
     },
     "devDependencies": {
         "@babel/core": "^7.0.0",
