--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
         "rimraf": "^2.6.2",
         "sass-loader": "^7.1.0",
         "style-loader": "^0.23.1",
+        "caniuse-lite": "^1.0.30001035",
+        "browserslist": "^4.9.1",
         "webpack": "^4.19.1",
         "webpack-cli": "^3.1.0",
         "webpack-dev-server": "^3.1.8"
